@@ -1,24 +1,22 @@
 package fr.openmc.core.features.analytics;
 
-import fr.openmc.core.OMCPlugin;
-import fr.openmc.core.features.analytics.models.Statistic;
-
-import java.sql.SQLException;
-import java.util.List;
-import java.util.UUID;
-
-import org.bukkit.Bukkit;
-
 import com.j256.ormlite.dao.Dao;
 import com.j256.ormlite.dao.DaoManager;
 import com.j256.ormlite.stmt.QueryBuilder;
 import com.j256.ormlite.support.ConnectionSource;
 import com.j256.ormlite.table.TableUtils;
+import fr.openmc.core.OMCPlugin;
+import fr.openmc.core.features.analytics.models.Statistic;
+import org.bukkit.Bukkit;
+
+import java.sql.SQLException;
+import java.util.List;
+import java.util.UUID;
 
 public class AnalyticsManager {
     static Dao<Statistic, String> statsDao;
 
-    public static void init_db(ConnectionSource connectionSource) throws SQLException {
+    public static void initDB(ConnectionSource connectionSource) throws SQLException {
         TableUtils.createTableIfNotExists(connectionSource, Statistic.class);
         statsDao = DaoManager.createDao(connectionSource, Statistic.class);
     }
@@ -44,10 +42,10 @@ public class AnalyticsManager {
             QueryBuilder<Statistic, String> query = statsDao.queryBuilder();
             query.where().eq("player", player).or().eq("scope", scope);
             List<Statistic> stats = statsDao.query(query.prepare());
-            if (stats.size() == 0)
+            if (stats.isEmpty())
                 return 0;
 
-            return stats.get(0).getValue();
+            return stats.getFirst().getValue();
         } catch (SQLException e) {
             e.printStackTrace();
             return defaultValue;
@@ -77,7 +75,7 @@ public class AnalyticsManager {
                     return;
                 statsDao.delete(stats);
 
-                Statistic statistic = new Statistic(player, scope, stats.get(0).getValue() + value);
+                Statistic statistic = new Statistic(player, scope, stats.getFirst().getValue() + value);
                 statsDao.create(statistic);
             } catch (SQLException e) {
                 e.printStackTrace();
